# monero-core

./: .gitignore  CMakeLists.txt  CMakeLists.txt.backup  README.md  copy_from_monero.md
cmake/: FindLMDB.cmake
src/: CMakeLists.txt  cryptonote_config.h
src/blockchain_db/: CMakeLists.txt  blockchain_db.h
src/blockchain_db/lmdb/: db_lmdb.c  db_lmdb.h
src/common/: CMakeLists.txt  file_util.c  file_util.h
src/crypto/: CMakeLists.txt  crypto.h  hash-ops.h  hash.h
src/cryptonote_basic/: CMakeLists.txt  cryptonote_basic.h  difficulty.h
src/ringct/: CMakeLists.txt  rctTypes.h
src/test/: CMakeLists.txt  lmdb_test.c
test/: CMakeLists.txt  lmdb_test.c
